# SciView

./: .gitignore  Launch-SciView-Stable.cmd  Launch-SciView-linux.sh  Launch-SciView-macOS.command  Launch-SciView-win64.cmd  README.md  demo_status_enhancements.py  main.py  pixi.toml  pyproject.toml  stitch_ygaps.py
BSub/: BSub_README.md  BSub_batch.py  Bsub.py
BSub/testing/: example_saxs_processing.py  test_background_subtraction.py  test_saxs_functionality.py  test_xy_alignment.py
archive/legacy_unused/: README.md
archive/legacy_unused/tabs/: data_reduction_tab.py
config/: __init__.py  app_style.py  beamline_config.py
examples/: profile_cms.yaml
scripts/: bootstrap_env.sh  run_sciview_unix.sh
src/sciview/: __init__.py  launchers.py
src/sciview.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sciview/calibration/: __init__.py  io.py
src/sciview/core/: __init__.py
src/sciview/data/: __init__.py  models.py
src/sciview/interfaces/: __init__.py
src/sciview/masking/: __init__.py  io.py  operations.py
src/sciview/processing/: __init__.py  angle_conventions.py  interfaces.py  recipes.py  reduction.py  transform.py  (+1 more)
standards/: standards_db.py
tabs/: __init__.py  base_image_tab.py  calibration_tab.py  image_browser_tab.py  info_tab.py  mask_tab.py  protocol_preview_tab.py  reduction_tab.py  tiled_browser_tab.py  transform_tab.py
tools/: __init__.py  batch_processing.py  mask_drawing_tools.py  peak_analysis.py  ring_center.py
utils/: __init__.py  calibration_utils.py  image_utils.py  resource_monitor.py  tiled_client.py
(+26 files in other folders)
