[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciview"
version = "0.1.0"
description = "Backend-first architecture foundation for SciView"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "Pillow>=10.0",
    "PyQt5>=5.15",
    "PyYAML>=6.0",
    "matplotlib>=3.8",
    "psutil>=7.1",
    "scipy>=1.11",
    "scitoolsscianalysis>=2.6.6",
    "tiled>=0.1,<0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
